# dry-bean-ml-project

./: .gitignore  README.md  pyproject.toml  streamlit_app_scoring.py
app/: streamlit_app.py  streamlit_app_scoring.py
artifacts/results/: class_report_handmade_gnb.csv  class_report_knn.csv  class_report_logistic_regression.csv  class_report_random_forest.csv  class_report_xgboost.csv  confusion_handmade_gnb.csv  confusion_knn.csv  confusion_logistic_regression.csv  confusion_random_forest.csv  confusion_xgboost.csv  data_profile.json  feature_ablation.csv  feature_importance_random_forest.csv  feature_importance_xgboost.csv  loss_history.csv  model_comparison.csv  robustness.csv
docs/superpowers/plans/: 2026-06-23-dry-bean-ml-project.md
docs/superpowers/specs/: 2026-06-23-dry-bean-ml-project-design.md
paper/: Dry_Bean_机器学习课程论文.docx  paper_metadata.json
scripts/: build_paper.py  capture_screenshots.py  patch_paper_identity.ps1
src/drybean/: __init__.py  cli.py  config.py  data.py  features.py  labels.py  metrics.py  noise.py  plots.py  preprocessing.py
src/drybean/experiments/: __init__.py  ablation.py  baseline.py  robustness.py  robustness_restore.py
src/drybean/models/: __init__.py  gaussian_nb.py  registry.py
src/drybean_ml_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_data.py  test_features.py  test_gaussian_nb.py  test_labels.py  test_metrics.py  test_noise.py  test_preprocessing.py  test_registry.py
