[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drybean-ml-project"
version = "1.0.0"
description = "Dry Bean Dataset multiclass machine learning course project"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "python-docx>=1.1",
  "scikit-learn>=1.4",
  "seaborn>=0.13",
  "streamlit>=1.35",
  "typer>=0.12",
  "xgboost>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
drybean = "drybean.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

